task-1-workload-hardening/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ledger
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    kubernetes.io/metadata.name: ledger
